ios app fixes, form fix for the applications page on mobile

--- a/components/getFunding/get-funding.scss
+++ b/components/getFunding/get-funding.scss
@@ -55,9 +55,6 @@
   }
 
   @include media("<tablet") {
-    &__wrapper {
-      height: 200px;
-    }
 
     &__text {
       font-size: 12px;
